@@ -12,6 +12,7 @@
 * Spreedly Core: Allow overriding the gateway token when running a transaction [hoenth]
 * Spreedly Core: Add order_id [hoenth]
 * Spreedly Core: Allow store without retain [hoenth]
+* Stripe: support multiple cards on account [pierre]
 
 == Version 1.41.0 (October 24th, 2013)
 
